update css style inside parallax, remove extra scrollbar, fix correct scrollbar from being hidden under navbar, arrange star canvas to appear on background properly as user scrolls

--- a/portfolio-website-react-app/src/App.css
+++ b/portfolio-website-react-app/src/App.css
@@ -110,6 +110,13 @@ p {
 /* Parallax Container Style */
 .parallax-container {
   height: 100vh; /* Ensure the parallax container takes the full viewport height */
+
+}
+
+/* Parallax Container Style */
+.parallax-container-home {
+  height: 100vh; /* Ensure the parallax container takes the full viewport height */
+  overflow: auto;
 }
 
 /* Adjust home section to account for the fixed navbar height */
